--- a/templates/security/reset_password/email.html.twig
+++ b/templates/security/reset_password/email.html.twig
@@ -143,7 +143,17 @@
                                                                   </tr>
                                                                   <tr>
                                                                     <td align="center" style="font-size:0px;padding:10px 25px;word-break:break-word;">
-                                                                      <div style="font-family:Arial, sans-serif;font-size:16px;font-weight:600;line-height:1;text-align:center;text-decoration:underline;color:#ff8743;">{{ url('app_reset_password', {token: resetToken.token}) }}</div>
+                                                                      <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse:separate;line-height:100%;">
+                                                                        <tbody>
+                                                                          <tr>
+                                                                            <td align="center" bgcolor="#374151" role="presentation" style="border:none;border-radius:8px;cursor:auto;mso-padding-alt:10px 25px;background:#374151;" valign="middle">
+                                                                              <a href="{{ url('app_reset_password', {token: resetToken.token}) }}" style="display:inline-block;background:#374151;color:#ff8743;font-family:Arial, sans-serif;font-size:16px;font-weight:600;line-height:120%;margin:0;text-decoration:underline;text-transform:none;padding:10px 25px;mso-padding-alt:0px;border-radius:8px;" target="_blank">
+                                                                                {{ url('app_reset_password', {token: resetToken.token}) }}
+                                                                              </a>
+                                                                            </td>
+                                                                          </tr>
+                                                                        </tbody>
+                                                                      </table>
                                                                     </td>
                                                                   </tr>
                                                                 </tbody>
