--- a/templates/components/table.html.twig
+++ b/templates/components/table.html.twig
@@ -31,7 +31,7 @@
 <div class="border-custom-dark-100 mt-5 grid grid-cols-1 overflow-hidden rounded-xl border-1">
     <div class="bg-custom-dark-200 grid grid-cols-7 p-5 font-bold">
         {% for key in keys %}
-            <p>
+            <p class="truncate mr-5">
                 {{ key }}
             </p>
         {% endfor %}
