--- a/templates/components/card.html.twig
+++ b/templates/components/card.html.twig
@@ -3,7 +3,7 @@
         <p class="mb-2 font-bold text-custom-gray-100">{{ title }}</p>
         <p class="">{{ text }}</p>
     </div>
-    <div class="flex items-center ml-5 p-3 bg-custom-{{ color }} rounded-xl" style="background-color: var(--color-custom-{{ color }});">
+    <div class="flex items-center ml-5 p-3 rounded-xl" style="background-color: var(--color-custom-{{ color }});">
         <i class="flex items-center text-3xl {{ icon }}"></i>
     </div>
 </div>
